# ImageFilter

./: README.md
octave/: dct_filter.m  homomorphic.m  image_filter.m  svlm.m  tone_map.m
src/: .clang  CMakeLists.txt  ImageComponents.cpp  ImageComponents.h  ImageIO.c  ImageIO.h  ImageTest.c  ImageTest.h  ToneMap.c  ToneMap.h  TrainingNN.c  TrainingNN.h  TrainningNN.c  TrainningNN.h  main.c  sampling.c  sampling.h  svlm.c  svlm.h
src/GA/: GA.h  GAGene.c  GAGene.h
